Category Logic Added

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Apna Ohio</string>
-
+	<string-array name="category_array">
+        <item>Moving Sale</item>
+        <item>Automobiles</item>
+        <item>Electronics</item>
+        <item>Others</item>        
+    </string-array>
 </resources>
